--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "promptwatch",
   "version": "0.0.1",
   "license": "MIT",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
